# kip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  VERSIONING.md  grammar-spec.md  plan.md  remediation-plan-2.md  remediation-plan.md
.github/workflows/: ci.yml
benches/: parallel_sheet.rs  throughput.rs
examples/: sheet.rs  sweep.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_lexer/: 12dash_eof  12prime_eof  fc_prime_tick  incomplete_frac
fuzz/corpus/fuzz_parser/: code_equation  ft_minus_in  ft_plus_in  sqrt_psi
fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
src/: diag.rs  dim.rs  eval.rs  fmt.rs  lexer.rs  lib.rs  packs.rs  parser.rs  quantity.rs  registry.rs  resolver.rs
src/eval/: affine.rs  builtins.rs  constraint.rs  known.rs  lint_sink.rs  mag.rs  partial.rs  rational.rs  unit_simplify.rs  units.rs  value.rs
src/fmt/: ftin.rs
src/lexer/: ftin.rs  number.rs  token.rs
src/packs/: call.rs  contract.rs  dimensionalize.rs  equation.rs  loader.rs
src/parser/: ast.rs  pratt.rs  unit.rs
src/registry/: anchor.rs  defs.rs  eval_expr.rs  resolve.rs  seed.rs
testdata/: demo_pack.toml
tests/: builtin_exactness.rs  concurrency.rs  conformance.rs  eval_conformance.rs  fmt_conformance.rs  hardening_conformance.rs  lexer_conformance.rs  loom_models.rs  pack_conformance.rs  parallel_conformance.rs  parser_conformance.rs  property_conformance.proptest-regressions  property_conformance.rs  registry_conformance.rs  remediation2_conformance.rs  remediation3_conformance.rs  remediation_conformance.rs  symbolic_conformance.rs  unit_simplify.rs
